...
            android:paddingRight="8dp"
            android:text="@string/details_header_ingredients"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/got_all_ingredients_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>

    <View
...
